--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
         There are other team sports, but I like <b>Ultimate Frisbee</b>.
     </p>
 
+    <hr>
+
+    <h3>Ordered List</h3>
+    
+    <ul>
+        <li>Boston Glory</li>
+        <li>Chicago Union</li>
+        <li>Toronto Rush</li>
+    </ul>
+
   </body>
 </html>
