--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
 
     <hr>
 
-    <h3>Ordered List</h3>
-    
-    <ul>
+    <h3>Lists</h3>
+
+    <ol>
         <li>Boston Glory</li>
+            <ul>
+                <li>Jake Taylor</li>
+                <li>Ivan Tran</li>
+                <li>Jay Talerman</li>
+            </ul>
         <li>Chicago Union</li>
         <li>Toronto Rush</li>
-    </ul>
+    </ol>
 
   </body>
 </html>
