--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>About Me</title>
+    <title>Sports</title>
   </head>
 
   <body>
@@ -27,6 +27,8 @@
         <li>Chicago Union</li>
         <li>Toronto Rush</li>
     </ol>
+
+    <a href="aboutme.html">About Me</a>
 
   </body>
 </html>
