--- a/aboutme.html
+++ b/aboutme.html
@@ -18,5 +18,37 @@
 
     <img src="statistics.jpg" alt="How to lie with statistics cover">
 
+    <hr>
+
+    <p>This is a table of the countries I would recommend to visit.</p>
+
+    <table>
+      <tr>
+        <th>Country</th>
+        <th>Comments</th>
+        <th>Time</th>
+      </tr>
+      <tr>
+        <td>Italy</td>
+        <td>They have good food</td>
+        <td>2 weeks</td>
+      </tr>
+      <tr>
+        <td>United Kingdom</td>
+        <td>They have big ben</td>
+        <td>3 weeks</td>
+      </tr>
+      <tr>
+        <td>France</td>
+        <td>They have the Eifell Tower</td>
+        <td>4 weeks</td>
+      </tr>
+      <tr>
+        <td>Egypt</td>
+        <td>They ahve pyramids</td>
+        <td>5 weeks</td>
+      </tr>
+    </table>
+    
   </body>
 </html>
