--- a/aboutme.html
+++ b/aboutme.html
@@ -19,6 +19,7 @@
     <img src="statistics.jpg" alt="How to lie with statistics cover">
 
     <hr>
+    <h3>Table</h3>
 
     <p>This is a table of the countries I would recommend to visit.</p>
 
@@ -49,6 +50,6 @@
         <td>5 weeks</td>
       </tr>
     </table>
-    
+
   </body>
 </html>
