--- a/aboutme.html
+++ b/aboutme.html
@@ -46,10 +46,25 @@
       </tr>
       <tr>
         <td>Egypt</td>
-        <td>They ahve pyramids</td>
+        <td>They have pyramids</td>
         <td>5 weeks</td>
       </tr>
     </table>
+
+    <hr>
+    <h3>Code</h3>
+
+    <pre>
+      add_filter( 'post_thumbnail_html', 'remove_width_attribute', 10 );
+      add_filter( 'image_send_to_editor', 'remove_width_attribute', 10 );
+      
+      function remove_width_attribute( $html ) 
+      {
+         $html = preg_replace( '/(width|height)="\d*"\s/', "", $html );
+         return $html;
+      }
+    </pre>
+    <a href="https://css-tricks.com/snippets/wordpress/remove-width-and-height-attributes-from-inserted-images/">Remove Width and Height Attributes From Inserted Images</a>
 
   </body>
 </html>
